rtg_tests/negative/excluded_dependency/cmd/app/main.go
package main

import _ "example.com/excluded"

func main() {}
